# git-ai

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Claude.md  Dockerfile  Makefile  PR_CHANGES.md  README-nix.md  README-refactor-installers.md  README.md  Taskfile.yml  flake.nix  install.ps1  install.sh
crates/common/: Cargo.toml
crates/common/src/: error.rs  feature_flags.rs  lib.rs  utils.rs
crates/git-ai/: Cargo.toml
crates/git-ai/agent-support/intellij/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
crates/git-ai/agent-support/opencode/: README.md  package.json  tsconfig.json
crates/git-ai/agent-support/vscode/: .gitignore  CHANGELOG.md  README.md  package.json  tsconfig.json
crates/git-ai/src/: config.rs  error.rs  feature_flags.rs  lib.rs  main.rs  repo_url.rs  utils.rs
crates/git-ai/src/api/: bundle.rs  cas.rs  client.rs  metrics.rs  mod.rs  types.rs
crates/git-ai/src/auth/: client.rs  credential_backend.rs  mod.rs
crates/git-ai/src/authorship/: attribution_tracker.rs  authorship_log.rs  authorship_log_serialization.rs  diff_ai_accepted.rs  ignore.rs  imara_diff_utils.rs  internal_db.rs  mod.rs  post_commit.rs  pre_commit.rs  prompt_utils.rs  range_authorship.rs  rebase_authorship.rs  stats.rs  virtual_attribution.rs
crates/git-ai/src/ci/: ci_context.rs  github.rs  gitlab.rs
crates/git-ai/src/commands/: blame.rs  checkpoint.rs  config.rs  continue_session.rs  core_hooks.rs  diff.rs  exchange_nonce.rs  flush_cas.rs  flush_logs.rs  flush_metrics_db.rs  git_ai_handlers.rs  git_handlers.rs  install_hooks.rs  logout.rs  mod.rs  prompt_picker.rs  prompts_db.rs  search.rs  share.rs  share_tui.rs  show.rs  show_prompt.rs  squash_authorship.rs  status.rs  sync_prompts.rs  upgrade.rs
crates/git-ai/src/git/: authorship_traversal.rs  diff_tree_to_tree.rs  mod.rs  refs.rs  repo_storage.rs  repository.rs  rewrite_log.rs  status.rs  sync_authorship.rs
crates/git-ai/src/mdm/: ensure_git_symlinks.rs  git_client_installer.rs  hook_installer.rs  mod.rs  skills_installer.rs  spinner.rs  utils.rs
crates/git-ai/src/metrics/: attrs.rs  db.rs  mod.rs
crates/git-ai/src/observability/: mod.rs  wrapper_performance_targets.rs
crates/git-ai/tests/: agent_v1.rs  ai_tab.rs  amend.rs  blame_flags.rs  chinese_text_edits.rs  ci_squash_rebase.rs  claude_code.rs  codex.rs  commit_post_stats_benchmark.rs  continue_cli.rs  continue_session.rs  cursor.rs  droid.rs  e2big_post_filter.rs  gemini.rs  git_alias_resolution.rs  git_cli_arg_parsing.rs  github_copilot.rs  github_copilot_integration.rs  github_integration.rs  gix_config_tests.rs  ignore_prompts.rs  internal_db_integration.rs  merge_rebase.rs  multi_repo_workspace.rs  opencode.rs  prompt_across_commit.rs  pull_rebase_ff.rs  realistic_complex_edits.rs  rebase.rs  search.rs  secrets_benchmark.rs  show_prompt.rs  simple_benchmark.rs  squash_merge.rs  stash_attribution.rs  stats.rs  subdirs.rs  utf8_filenames.rs  virtual_attribution_merge.rs
crates/git-ai/tests/common/: mod.rs
crates/git-ai/tests/e2e/: installer-shell-detection.bats  squash-editor.sh  user-scenarios.bats
crates/git-ai/tests/fixtures/: claude-code-with-thinking.jsonl  codex-session-simple.jsonl  codex-session-updated.jsonl  continue-cli-session-simple.json  copilot_session_empty_then_patched.jsonl  (+8 more)
installers/agents/: Cargo.toml
src/: main.rs  (+3 more)
(+405 files in other folders)
