[workspace]
members = [
    "crates/git-ai",
    "crates/common",
]


# Shared dependencies here.
# Not defined necessarily used by all members, just a reference if needed.
[workspace.dependencies]
# common package should always be included from root
serde_json = "1.0"
git2 = "0.20.2"
rusqlite = { version = "0.31", features = ["bundled"] }
