[workspace]
members = [
    "crates/git-ai",
    "crates/common",
]
resolver = "3"

[profile.test]
debug = 1      # Limits debug info (faster link time)
# strip = "debuginfo"

# Shared dependencies here.
# Not defined necessarily used by all members, just a reference if needed.
[workspace.dependencies]
# common package should always be included from root, since it's accessed by everything.
common = { path = "crates/common" }
serde = {version = "1.0", features = ["derive"] }
envy = "0.4"
serde_json = "1.0"
git2 = "0.20.2"
url = "2.5"
rusqlite = { version = "0.31", features = ["bundled"] }
