[package]
name = "common"
version = "0.0.1"
edition = "2024"

[features]
test-support = ["dep:git2"]

[dependencies]
serde = { workspace = true }
envy = {workspace = true}
serde_json = { workspace = true}
git2 = { workspace = true, optional = true }
url = {workspace = true } # added to common crate
rusqlite = { workspace = true }