[package]
name = "git-ai"
version = "1.1.2"
edition = "2024"

[dependencies]
common = { workspace = true }
installers-agents = { workspace = true }
installers-git-clients = { workspace = true }

clap = { version = "4.5", features = ["derive"] }
serde = { workspace = true } # This is imported through common now.
serde_json = { workspace = true } # added to common crate
serde_json_canonicalizer = "0.3"
sha2 = "0.10"
imara-diff = "0.2"
chrono = { version = "0.4.41", features = ["serde"] }
humantime = "2.3"
indicatif = "0.17"
smol = "1.3"
futures = "0.3"
rusqlite = { workspace = true } # added to common crate
libc = "0.2"
git2 = { workspace = true, optional = true}
jsonc-parser = { version = "0.27", features = ["cst"] }
dirs = "5.0"
minreq = { version = "2.12", features = ["https-rustls"] }
url = {workspace = true} # added to common crate
glob = "0.3"
uuid = { version = "1.11", features = ["v4"] }
ratatui = "0.28"
crossterm = "0.28"
keyring = { version = "3", features = ["sync-secret-service", "apple-native", "windows-native"], optional = true }
zip = { version = "2.1", default-features = false, features = ["deflate"] }
once_cell = "1.19"
gix-config = "0.51.0"
regex = "1.10"
toml = "0.8"

[features]
test-support = ["dep:git2", "common/test-support"]
keyring = ["dep:keyring"]

[dev-dependencies]
git-ai = { path = ".", features = ["test-support"] }
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"
insta = "1.38"
rand = "0.8"
regex = "1.10"
filetime = "0.2"
serial_test = "3.2"
rstest = "0.23"
paste = "1.0"
