[package]
name = "installers-agents"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
jsonc-parser = { version = "0.27", features = ["cst"] }
dirs = "5.0"
minreq = { version = "2.12", features = ["https-rustls"] }
zip = "2.1"

[dev-dependencies]
tempfile = "3.8"
serial_test = "3.2"
